Rolled the py26-pymvpa default compiler back to gcc44 to be in line with atlas port
git-svn-id: https://svn.macports.org/repository/macports/trunk@71734 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py26-pymvpa/Portfile
+++ b/dports/python/py26-pymvpa/Portfile
@@ -6,6 +6,7 @@ PortGroup               python26 1.0
 
 name                    py26-pymvpa
 version                 0.4.5.dev23
+revision                1
 categories              python
 
 platforms               darwin
@@ -69,10 +70,10 @@ variant gcc45 conflicts gcc43 gcc44 description {build with gcc 4.5} {}
 
 if {[variant_isset gcc43]} {
     set gccversion 4.3
-} elseif {[variant_isset gcc44]} {
+} elseif {[variant_isset gcc45]} {
     set gccversion 4.4
 } else {
-    default_variants +gcc45
+    default_variants +gcc44
     set gccversion 4.5
 }
 
