Fixed a lint error in py26-tvnamer
git-svn-id: https://svn.macports.org/repository/macports/trunk@71737 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py26-tvnamer/Portfile
+++ b/dports/python/py26-tvnamer/Portfile
@@ -11,6 +11,7 @@ maintainers             jameskyle
 description             Renames files in a standard way that's easily parsable \
                         For example, foo.bar.s02e03.m4v becomes \"foo bar \
                         \[02x03\].m4v
+long_description        ${description}
 
 homepage                http://github.com/dbr/tvnamer
 master_sites            ${homepage}
