postgresql90*: version bump to final 9.0.0 release
git-svn-id: https://svn.macports.org/repository/macports/trunk@71738 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/databases/postgresql90-doc/Portfile
+++ b/dports/databases/postgresql90-doc/Portfile
@@ -3,11 +3,11 @@
 PortSystem 1.0
 
 name			postgresql90-doc
-version			9.0rc1
+version			9.0.0
 categories		databases
 platforms		darwin
 maintainers		mww jwa
-description		Documentation for the postgresql database ALPHA release.
+description		Documentation for the postgresql database.
 long_description PostgreSQL is Object-Relational Database Management System. \
 				It supports almost all SQL constructs, including transactions, \
 				subselects, and user-defined types and functions. Write-ahead \
@@ -18,9 +18,9 @@ homepage		http://www.postgresql.org/
 master_sites		postgresql:source/v${version}
 distname		postgresql-${version}
 
-checksums           md5     c10400b541b8ce2e8c083c6538712429 \
-                    sha1    976bc8c2f703dbcdd7fc5ee17fb8217028399ff9 \
-                    rmd160  79e08c3231ec9716786fe07e9429fbdf07025c42
+checksums           md5     14c2122cc322e69ab2ab702ed7714bbe \
+                    sha1    ed2f83cd1a83c40dcbe0ba19ee3ba2a7faa0de3d \
+                    rmd160  a6c25636254277029977768be2a73496fc87848a
 
 use_bzip2		yes
 dist_subdir		postgresql90
