--- a/dports/databases/postgresql90/Portfile
+++ b/dports/databases/postgresql90/Portfile
@@ -3,12 +3,12 @@
 PortSystem 1.0
 
 name			postgresql90
-version			9.0rc1
+version			9.0.0
 
 categories		databases
 platforms		darwin
 maintainers		mww jwa
-description		The most advanced open-source database available anywhere. ALPHA release!
+description		The most advanced open-source database available anywhere.
 long_description PostgreSQL is Object-Relational Database Management System. \
 				It supports almost all SQL constructs, including transactions, \
 				subselects, and user-defined types and functions. Write-ahead \
@@ -20,9 +20,9 @@ master_sites		http://ftp3.de.postgresql.org/pub/Mirrors/ftp.postgresql.org/sourc
 			postgresql:source/v${version}/
 distname		postgresql-${version}
 
-checksums           md5     c10400b541b8ce2e8c083c6538712429 \
-                    sha1    976bc8c2f703dbcdd7fc5ee17fb8217028399ff9 \
-                    rmd160  79e08c3231ec9716786fe07e9429fbdf07025c42
+checksums           md5     14c2122cc322e69ab2ab702ed7714bbe \
+                    sha1    ed2f83cd1a83c40dcbe0ba19ee3ba2a7faa0de3d \
+                    rmd160  a6c25636254277029977768be2a73496fc87848a
 
 use_bzip2		yes
 
