p5-dbd-pg: added postgresql90 and postgresql91 variants and made postgresql90 the new default
git-svn-id: https://svn.macports.org/repository/macports/trunk@71739 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/perl/p5-dbd-pg/Portfile
+++ b/dports/perl/p5-dbd-pg/Portfile
@@ -16,78 +16,77 @@ checksums             md5 96b24b29d876bbbcc7c194115917a2f0 \
                       sha1 9346e6937a1dcc27d7da6f8aeb3f897bd8b39332 \
                       rmd160 33150577792c59e214971dbb7e751798de60498e
 
-depends_lib-append    port:postgresql84 \
-                      port:p5-dbi \
+depends_lib-append    port:p5-dbi \
                       port:p5-version \
                       port:p5-module-signature \
                       port:p5-test-yaml-meta \
                       port:p5-test-warn
 
-configure.env         PATH=${prefix}/lib/postgresql84/bin:$env(PATH) \
-                      POSTGRES_INCLUDE="${prefix}/include/postgresql84" \
-                      POSTGRES_LIB="${prefix}/lib/postgresql84 -lssl"
-
-variant postgresql7 conflicts postgresql80 postgresql81 postgresql82 postgresql83 description {build with postgresql7 port} {
-    depends_lib-delete      port:postgresql84
+variant postgresql7 conflicts postgresql80 postgresql81 postgresql82 postgresql83 postgresql84 postgresql90 postgresql91 description {build with postgresql7 port} {
     depends_lib-append      port:postgresql7
 
-    configure.env-delete    PATH=${prefix}/lib/postgresql84/bin:$env(PATH) \
-                            POSTGRES_INCLUDE="${prefix}/include/postgresql84" \
-                            POSTGRES_LIB="${prefix}/lib/postgresql84 -lssl"
-
-    configure.env-append    PATH=${prefix}/lib/pgsql7/bin:$env(PATH) \
+    configure.env           PATH=${prefix}/lib/pgsql7/bin:$env(PATH) \
                             POSTGRES_INCLUDE="${prefix}/include/pgsql7" \
                             POSTGRES_LIB="${prefix}/lib/pgsql7 -lssl"
 }
 
-variant postgresql80 conflicts postgresql7 postgresql81 postgresql82 postgresql83 description {build with postgresql80 port} {
-    depends_lib-delete      port:postgresql84
+variant postgresql80 conflicts postgresql7 postgresql81 postgresql82 postgresql83 postgresql84 postgresql90 postgresql91 description {build with postgresql80 port} {
     depends_lib-append      port:postgresql80
 
-    configure.env-delete    PATH=${prefix}/lib/postgresql84/bin:$env(PATH) \
-                            POSTGRES_INCLUDE="${prefix}/include/postgresql84" \
-                            POSTGRES_LIB="${prefix}/lib/postgresql84 -lssl"
-
-    configure.env-append    PATH=${prefix}/lib/pgsql8/bin:$env(PATH) \
+    configure.env           PATH=${prefix}/lib/pgsql8/bin:$env(PATH) \
                             POSTGRES_INCLUDE="${prefix}/include/pgsql8" \
                             POSTGRES_LIB="${prefix}/lib/pgsql8 -lssl"
 }
 
-variant postgresql81 conflicts postgresql7 postgresql80 postgresql82 postgresql83 description {build with postgresql81 port} {
-    depends_lib-delete      port:postgresql84
+variant postgresql81 conflicts postgresql7 postgresql80 postgresql82 postgresql83 postgresql84 postgresql90 postgresql91 description {build with postgresql81 port} {
     depends_lib-append      port:postgresql81
 
-    configure.env-delete    PATH=${prefix}/lib/postgresql84/bin:$env(PATH) \
-                            POSTGRES_INCLUDE="${prefix}/include/postgresql84" \
-                            POSTGRES_LIB="${prefix}/lib/postgresql84 -lssl"
-
-    configure.env-append    PATH=${prefix}/lib/postgresql81/bin:$env(PATH) \
+    configure.env           PATH=${prefix}/lib/postgresql81/bin:$env(PATH) \
                             POSTGRES_INCLUDE="${prefix}/include/postgresql81" \
                             POSTGRES_LIB="${prefix}/lib/postgresql81 -lssl"
 }
 
-variant postgresql82 conflicts postgresql7 postgresql80 postgresql81 postgresql83 description {build with postgresql82 port} {
-    depends_lib-delete      port:postgresql84
+variant postgresql82 conflicts postgresql7 postgresql80 postgresql81 postgresql83 postgresql84 postgresql90 postgresql91 description {build with postgresql82 port} {
     depends_lib-append      port:postgresql82
 
-    configure.env-delete    PATH=${prefix}/lib/postgresql84/bin:$env(PATH) \
-                            POSTGRES_INCLUDE="${prefix}/include/postgresql84" \
-                            POSTGRES_LIB="${prefix}/lib/postgresql84 -lssl"
-
-    configure.env-append    PATH=${prefix}/lib/postgresql82/bin:$env(PATH) \
+    configure.env           PATH=${prefix}/lib/postgresql82/bin:$env(PATH) \
                             POSTGRES_INCLUDE="${prefix}/include/postgresql82" \
                             POSTGRES_LIB="${prefix}/lib/postgresql82 -lssl"
 }
 
-variant postgresql83 conflicts postgresql7 postgresql80 postgresql81 postgresql82 description {build with postgresql83 port} {
-    depends_lib-delete      port:postgresql84
+variant postgresql83 conflicts postgresql7 postgresql80 postgresql81 postgresql82 postgresql84 postgresql90 postgresql91 description {build with postgresql83 port} {
     depends_lib-append      port:postgresql83
 
-    configure.env-delete    PATH=${prefix}/lib/postgresql84/bin:$env(PATH) \
-                            POSTGRES_INCLUDE="${prefix}/include/postgresql84" \
-                            POSTGRES_LIB="${prefix}/lib/postgresql84 -lssl"
-
-    configure.env-append    PATH=${prefix}/lib/postgresql83/bin:$env(PATH) \
+    configure.env           PATH=${prefix}/lib/postgresql83/bin:$env(PATH) \
                             POSTGRES_INCLUDE="${prefix}/include/postgresql83" \
                             POSTGRES_LIB="${prefix}/lib/postgresql83 -lssl"
+}
+
+variant postgresql84 conflicts postgresql7 postgresql80 postgresql81 postgresql82 postgresql83 postgresql90 postgresql91 description {build with postgresql84 port} {
+    depends_lib-append      port:postgresql84
+
+    configure.env           PATH=${prefix}/lib/postgresql84/bin:$env(PATH) \
+                            POSTGRES_INCLUDE="${prefix}/include/postgresql84" \
+                            POSTGRES_LIB="${prefix}/lib/postgresql84 -lssl"
+}
+
+variant postgresql90 conflicts postgresql7 postgresql80 postgresql81 postgresql82 postgresql83 postgresql84 postgresql91 description {build with postgresql90 port} {
+    depends_lib-append      port:postgresql90
+
+    configure.env           PATH=${prefix}/lib/postgresql90/bin:$env(PATH) \
+                            POSTGRES_INCLUDE="${prefix}/include/postgresql90" \
+                            POSTGRES_LIB="${prefix}/lib/postgresql90 -lssl"
+}
+
+variant postgresql91 conflicts postgresql7 postgresql80 postgresql81 postgresql82 postgresql83 postgresql84 postgresql90 description {build with postgresql91 port} {
+    depends_lib-append      port:postgresql91
+
+    configure.env           PATH=${prefix}/lib/postgresql91/bin:$env(PATH) \
+                            POSTGRES_INCLUDE="${prefix}/include/postgresql91" \
+                            POSTGRES_LIB="${prefix}/lib/postgresql91 -lssl"
+}
+
+# Default to latest release
+if {![variant_isset postgresql7] && ![variant_isset postgresql80] && ![variant_isset postgresql81] && ![variant_isset postgresql82] && ![variant_isset postgresql83] && ![variant_isset postgresql84] && ![variant_isset postgresql91]} {
+    default_variants        +postgresql90
 }
