php5-postgresql: fix homepage
git-svn-id: https://svn.macports.org/repository/macports/trunk@71740 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/php/php5-postgresql/Portfile
+++ b/dports/php/php5-postgresql/Portfile
@@ -11,6 +11,7 @@ php5extension.extensions        pgsql pdo_pgsql
 categories-append               databases
 platforms                       darwin
 maintainers                     ryandesign
+homepage                        http://www.php.net/pgsql
 
 description                     a PHP interface to PostgreSQL, including \
                                 the pgsql and pdo_pgsql extensions
