bzip2: fix livecheck
git-svn-id: https://svn.macports.org/repository/macports/trunk@71741 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/archivers/bzip2/Portfile
+++ b/dports/archivers/bzip2/Portfile
@@ -55,3 +55,6 @@ platform darwin {
         ln -s libbz2.${version}.dylib ${destroot}${prefix}/lib/libbz2.dylib
     }
 }
+
+livecheck.type          regex
+livecheck.regex         {<b>([0-9.]+)</b>}
