telepathy-glib: update to verion 0.12.0, dependencies.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71742 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/comms/telepathy-glib/Portfile
+++ b/dports/comms/telepathy-glib/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name            telepathy-glib
-version         0.11.16
+version         0.12.0
 description     The ${name} component of Telepathy - a Flexible Communications Framework.
 long_description \
                 The ${name} component of Telepathy - a Flexible Communications Framework. \
@@ -18,16 +18,17 @@ platforms       darwin
 homepage        http://telepathy.freedesktop.org/wiki
 master_sites    http://telepathy.freedesktop.org/releases/${name}/
 
-checksums       md5     52b5f8ebb941fc5f400382dd4b5fa061 \
-                sha1    bd86f816d93247d239e20dd2c635f369de309f30 \
-                rmd160  0625cf4bc0663befa0e00cdc12eeb6fe647e908e
+checksums       md5     97126148b42ac4ce5db1561156180a3e \
+                sha1    76270f4cfb84bae4668d531d16dd6afc77acbbc2 \
+                rmd160  93a76b69db709422e0772fe239b15ba9d59d474a
 
 depends_build   port:pkgconfig \
                 port:gnome-doc-utils \
                 port:gtk-doc \
                 port:python26
 
-depends_lib     port:dbus-glib
+depends_lib     port:dbus-glib \
+                port:gobject-introspection
 
 patchfiles      patch-configure.diff
 
