--- a/dports/aqua/TOra/Portfile
+++ b/dports/aqua/TOra/Portfile
@@ -4,7 +4,7 @@
 PortSystem              1.0
 
 name                    TOra
-version                 2.1.2
+version                 2.1.3
 description             GUI tool for Oracle, PostgreSQL, and MySQL
 long_description        Database developer/DBA frontend for various DB servers.
 maintainers             scribus.info:petr
@@ -14,9 +14,9 @@ homepage                http://torasql.com/
 master_sites            sourceforge:tora
 distname                tora-${version}
 
-checksums               md5     2b49bbe9f4dc83ce33a22e888575ea73 \
-                        sha1    7bffbc9dc6d0e0f292502e4cffa098d3585db289 \
-                        rmd160  23cf84518d97f31244c6c86c7f0f0bcf95025966
+checksums               md5     ea4a75a9daeaf58492413e3f7fe40293 \
+                        sha1    d33ea3bafb09c5382ef4e0cb0e8ca4ed848a9155 \
+                        rmd160  084d90c94184939e24ac94109ff7940a33bed1d7
 
 depends_build           port:cmake
 
@@ -25,8 +25,8 @@ depends_build           port:cmake
 # to spot qt4-mac's dependencies' version bumps.
 depends_lib             port:postgresql83 \
                         port:qt4-mac \
+                        port:qscintilla \
                         port:oracle-instantclient
-#                        port:qscintilla
 
 patchfiles              patch-osx_tools-Info.plist.in.diff
 
@@ -43,7 +43,7 @@ configure.args          -DCMAKE_LIBRARY_PATH=${prefix}/lib \
                         -DWANT_BUNDLE=1 \
                         -DWANT_BUNDLE_STANDALONE=1 \
                         -DWANT_RPM=0 \
-                        -DWANT_INTERNAL_QSCINTILLA=1 \
+                        -DWANT_INTERNAL_QSCINTILLA=0 \
                         -DENABLE_DB2=0 \
                         -DQT_QMAKE_EXECUTABLE=${prefix}/libexec/qt4-mac/bin/qmake .
 
