xmlwrapp: update to 0.6.2, add license info
git-svn-id: https://svn.macports.org/repository/macports/trunk@71748 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/xmlwrapp/Portfile
+++ b/dports/devel/xmlwrapp/Portfile
@@ -2,11 +2,12 @@
 
 PortSystem 1.0
 name              xmlwrapp
-version           0.5.0
-revision          3
+version           0.6.2
 categories        devel
 platforms         darwin
 maintainers       stechert openmaintainer
+license           BSD
+
 description       xmlwrapp is a modern style C++ library for working with XML data
 long_description  xmlwrapp is a modern style C++ library for working with XML data. \
                   It provides a simple and easy to use interface for the very \
@@ -16,31 +17,10 @@ long_description  xmlwrapp is a modern style C++ library for working with XML da
 		  installs libxsltwrapp which is part of the xmlwrapp package.
 homepage          http://sourceforge.net/project/showfiles.php?group_id=142403
 master_sites      sourceforge
-extract.suffix    .tgz
 
-depends_build     bin:perl:perl5
+depends_build     port:boost
 
 depends_lib       port:libxslt
 
-checksums         md5 99ba63b283762e749e1663014e5cb0fd
-
-patch.pre_args    -p1
-patchfiles        patch-mkmf
-
-configure.cppflags-append	"-I${prefix}/include/libxml2"
-
-configure {
-	system "cd ${worksrcpath} && perl configure.pl --xml2-config=${prefix}/bin/xml2-config --xslt-config=${prefix}/bin/xslt-config --prefix=${prefix}"
-
-	reinplace "s#POST_LDFLAGS=#POST_LDFLAGS=-L${prefix}/lib -lxml2 -lz -lpthread -liconv -lm -lxslt#" ${worksrcpath}/src/libxml/Makefile
-	reinplace "s#libxmlwrapp.so#libxmlwrapp.dylib#g" ${worksrcpath}/src/libxml/Makefile
-
-	reinplace "s#POST_LDFLAGS=#POST_LDFLAGS=-L${prefix}/lib -lxml2 -lz -lpthread -liconv -lm -lxslt -lexslt -L../libxml -lxmlwrapp#" ${worksrcpath}/src/libxslt/Makefile
-	reinplace "s#libxsltwrapp.so#libxsltwrapp.dylib#g" ${worksrcpath}/src/libxslt/Makefile
-
-	reinplace "s#libxmlwrapp.so.5#libxmlwrapp.5.dylib#g" ${worksrcpath}/Makefile
-	reinplace "s#libxmlwrapp.so#libxmlwrapp.dylib#g" ${worksrcpath}/Makefile
-
-	reinplace "s#libxsltwrapp.so.2#libxsltwrapp.2.dylib#g" ${worksrcpath}/Makefile
-	reinplace "s#libxsltwrapp.so#libxsltwrapp.dylib#g" ${worksrcpath}/Makefile
-}
+checksums         sha1    b3ef8bff215bbacd988790615b76379672105928 \
+                  rmd160  2aa670e2f0154af8c5618cb7cc65ec6c344b0bfa
