py*-beaker: update to 1.5.4 and add "supported_archs noarch"
git-svn-id: https://svn.macports.org/repository/macports/trunk@71749 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py25-beaker/Portfile
+++ b/dports/python/py25-beaker/Portfile
@@ -5,9 +5,11 @@ PortSystem          1.0
 PortGroup           python25 1.0
 
 name                py25-beaker
-version             1.0.2
+version             1.5.4
 categories-append   www
 maintainers         openmaintainer stechert akitada
+supported_archs     noarch
+
 description         Session WSGI Middleware
 long_description    Beaker is a simple WSGI middleware to use the \
                     Myghty Container API.
@@ -21,6 +23,10 @@ distname            Beaker-${version}
 depends_lib         port:py25-distribute \
                     port:py25-myghtyutils
 
-checksums           md5 0123b5bead109d0e26df595a2f7456ca \
-                    sha1 b0f8cef4d22a888fceb39cda0f6d4d974ce0b155 \
-                    rmd160 036f771b2772a60b95d77ea4a532f25c49177dfc
+checksums           md5     de84e7511119dc0b8eb4ac177d3e2512 \
+                    sha1    72a696854e36e2ea92f4535209e4538baf06caa0 \
+                    rmd160  a60e052a362a6fbf0d3564caaff625879fdef37f
+
+livecheck.type      regex
+livecheck.url       ${master_sites}
+livecheck.regex     "Beaker-(\\d+(?:\\.\\d+)*)${extract.suffix}"
