--- a/dports/python/py26-beaker/Portfile
+++ b/dports/python/py26-beaker/Portfile
@@ -5,9 +5,11 @@ PortSystem          1.0
 PortGroup           python26 1.0
 
 name                py26-beaker
-version             1.5.3
+version             1.5.4
 categories-append   www
 maintainers         openmaintainer stechert akitada
+supported_archs     noarch
+
 description         Session WSGI Middleware
 long_description    Beaker is a simple WSGI middleware to use the \
                     Myghty Container API.
@@ -20,9 +22,9 @@ distname            Beaker-${version}
 
 depends_lib         port:py26-distribute
 
-checksums           md5     b465f1919dbbed4917febc91318c8e0f \
-                    sha1    333d1bcd1fc79a7fe3210de81e0375df3a867afd \
-                    rmd160  fe855cabed3327cb75d080639d2750f0a7a02982
+checksums           md5     de84e7511119dc0b8eb4ac177d3e2512 \
+                    sha1    72a696854e36e2ea92f4535209e4538baf06caa0 \
+                    rmd160  a60e052a362a6fbf0d3564caaff625879fdef37f
 
 livecheck.type      regex
 livecheck.url       ${master_sites}
