--- a/dports/python/py-myghty/Portfile
+++ b/dports/python/py-myghty/Portfile
@@ -3,9 +3,11 @@
 PortSystem			1.0
 PortGroup			python24 1.0
 name				py-myghty
-version				1.1
+version				1.2
 categories-append		www
 maintainers			nomaintainer
+supported_archs			noarch
+
 description			Myghty is a Python based templating framework \
 				originally based on HTML::Mason.
 long_description		Myghty fully implements Mason's templating \
@@ -22,4 +24,5 @@ homepage			http://www.myghty.org
 master_sites			http://cheeseshop.python.org/packages/source/M/Myghty/
 distname			Myghty-${version}
 
-checksums			sha1 2e6714780d2250d936731a74b331d924bb1799bc
+checksums			sha1    d0fea3736f24cfa568560382598dac91bbbe5c61 \
+				rmd160  03d981761e61d38df72f27d71aa9b1e3220cb233
