py*-myghtyutils: noarch
git-svn-id: https://svn.macports.org/repository/macports/trunk@71751 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py25-myghtyutils/Portfile
+++ b/dports/python/py25-myghtyutils/Portfile
@@ -4,8 +4,11 @@ PortSystem			1.0
 PortGroup			python25 1.0
 name				py25-myghtyutils
 version				0.52
+revision			1
 categories-append		www
 maintainers			nomaintainer
+supported_archs			noarch
+
 description			Container and Utility Functions from the \
 				Myghty Template Framework.
 long_description		${description}
