--- a/dports/sysutils/watch/Portfile
+++ b/dports/sysutils/watch/Portfile
@@ -3,6 +3,7 @@
 PortSystem 1.0
 name	   	watch
 version	    	3.2.8
+revision	1
 categories  	sysutils
 maintainers 	yahoo.com:mjhsieh
 description    	watch executes a program periodically, showing output fullscreen
@@ -23,8 +24,15 @@ use_configure	no
 
 depends_lib	port:ncurses
 
+variant universal {}
+if {[variant_isset universal]} {
+	set archflags ${configure.universal_cflags}
+} else {
+	set archflags ${configure.cc_archflags}
+}
+
 build.target	watch
-build.args	CC=${configure.cc} \
+build.args	CC="${configure.cc} ${archflags}" \
 		LDFLAGS="${configure.ldflags}" \
 		PKG_LDFLAGS=""
 
