bullet: update to version 2.77
git-svn-id: https://svn.macports.org/repository/macports/trunk@71754 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/bullet/Portfile
+++ b/dports/devel/bullet/Portfile
@@ -5,7 +5,7 @@ PortSystem          1.0
 PortGroup           cmake 1.0
 
 name                bullet
-version             2.75
+version             2.77
 categories          devel
 
 maintainers         stromnov openmaintainer
@@ -18,18 +18,18 @@ platforms           darwin
 
 homepage            http://bulletphysics.org/
 master_sites        googlecode:bullet
-use_zip             yes
+extract.suffix      .tgz
 
-checksums           md5     38ed8afcd53a5e0116ce7541eccbc0f6 \
-                    sha1    1d8e057c24f697caeb9ec25cde94193acb2b0d50 \
-                    rmd160  fddd0d82146906a5628d70f118135226317d4aef
+checksums           md5     a28385260d76a6be5e321294353462bb \
+                    sha1    d0dd2e8d991137781ed63b6e9bc123a9cf90457f \
+                    rmd160  42a52d6a343c78d9d3c126a4811d31f0a869d1d2
 
 configure.args-append \
+                    -DCMAKE_INSTALL_PREFIX=${prefix} \
                     -DCMAKE_INSTALL_NAME_DIR=${prefix}/lib \
                     -DBUILD_SHARED_LIBS=ON \
-                    -DBUILD_EXTRAS=OFF \
-                    -DBUILD_DEMOS=OFF
-
-use_parallel_build  no
-
-livecheck.regex     <a href="http://${name}.googlecode.com/files/${name}\-(\\d+(?:\\.\\d+)*)${extract.suffix}"
+                    -DBUILD_EXTRAS=ON \
+                    -DBUILD_DEMOS=OFF \
+                    -DCMAKE_BUILD_TYPE="Release" \
+                    -DINSTALL_LIBS=ON \
+                    -DINSTALL_EXTRA_LIBS=ON
