fetchmail: add startupitem (#10924)
git-svn-id: https://svn.macports.org/repository/macports/trunk@71758 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/mail/fetchmail/Portfile
+++ b/dports/mail/fetchmail/Portfile
@@ -48,6 +48,10 @@ post-destroot {
     }
 }
 
+startupitem.create	yes
+startupitem.start	"${prefix}/bin/fetchmail -f ${prefix}/etc/.fetchmail -d120"
+startupitem.stop	"${prefix}/bin/fetchmail -quit"
+
 variant ssl description "Support secure connections using OpenSSL" {
     depends_lib-append		port:openssl
     configure.args-delete	--without-ssl
