various gnome ports: not universal due to dependencies
git-svn-id: https://svn.macports.org/repository/macports/trunk@71759 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/alacarte/Portfile
+++ b/dports/gnome/alacarte/Portfile
@@ -35,6 +35,12 @@ patchfiles      patch-Makefile.in.diff \
 
 configure.python ${prefix}/bin/python2.6
 
+#
+# gnome-menus is not universal
+#
+
+universal_variant no
+
 post-destroot {
     file rename ${destroot}${prefix}/bin/alacarte.py ${destroot}${prefix}/bin/alacarte
 }
