--- a/dports/gnome/empathy/Portfile
+++ b/dports/gnome/empathy/Portfile
@@ -53,6 +53,12 @@ configure.args  --mandir=${prefix}/share/man \
 
 configure.python ${prefix}/bin/python2.6
 
+#
+# telepathy-farsight is not universal
+#
+
+universal_variant no
+
 post-activate {
     system "scrollkeeper-update"
     system "${prefix}/bin/gtk-update-icon-cache -f -t ${prefix}/share/icons/hicolor"
