--- a/dports/gnome/eog/Portfile
+++ b/dports/gnome/eog/Portfile
@@ -46,6 +46,12 @@ configure.python ${prefix}/bin/python2.6
 set python_framework ${frameworks_dir}/Python.framework/Versions/2.6
 configure.pkg_config_path ${python_framework}/lib/pkgconfig
 
+#
+# gnome-desktop is not universal
+#
+
+universal_variant no
+
 post-activate {
    system "scrollkeeper-update"
    system "export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source` && \
