--- a/dports/gnome/seahorse-plugins/Portfile
+++ b/dports/gnome/seahorse-plugins/Portfile
@@ -32,6 +32,12 @@ configure.args  --disable-epiphany \
                 --disable-update-mime-database \
                 --disable-schemas-install \
                 --disable-scrollkeeper
+
+#
+# nautilus gnome-panel are not universal
+#
+
+universal_variant no
                 
 post-activate {
     system "${prefix}/bin/update-mime-database ${prefix}/share/mime; true"
