gnome-python-desktop: not universal due to dependencies.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71760 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/gnome-python-desktop/Portfile
+++ b/dports/gnome/gnome-python-desktop/Portfile
@@ -64,6 +64,12 @@ platform darwin 9 {
     }
 }
 
+#
+# gnome-panel is not universal
+#
+
+universal_variant no
+
 post-destroot {
     set docdir ${prefix}/share/doc/${name}
     xinstall -d ${destroot}${docdir}
