--- a/dports/sysutils/dpkg/Portfile
+++ b/dports/sysutils/dpkg/Portfile
@@ -1,46 +1,44 @@
 # $Id$
 
 PortSystem 1.0
+
 name			dpkg
-version			1.10.28
-revision		1
+version			1.14.29
 platforms		darwin freebsd
 categories		sysutils archivers
 maintainers		landonf openmaintainer
 description		Debian package maintenance system
-homepage		http://www.debian.org/
+long_description ${description}
+homepage		http://wiki.debian.org/Teams/Dpkg
 
-master_sites		http://ftp.debian.org/debian/pool/main/d/dpkg/
-checksums		md5 912ece8f3c39192503ff2bcb4c74182e
+master_sites	debian:d/dpkg/
+checksums		md5 4326172a959b5b6484b4bc126e9f628d \
+			sha1 15a35dd96dac6a99f24844b2eff85f8fad37ab06
 
 # Use MacPorts versions explicitly
 depends_lib		port:gettext \
 			port:libiconv \
-			bin:perl:perl5
+			port:perl5 \
+			port:lzmautils \
+			port:coreutils \
+			port:bzip2 \
+			port:zlib
 
 
 distname		${name}_${version}
 worksrcdir		${name}-${version}
 
-patchfiles		patch-config.h.in \
-			patch-configure \
-			patch-configure.in \
-			patch-lib_utils.c \
-			patch-lib_tarfn.c \
+patchfiles		patch-lib_tarfn.c \
 			patch-main_remove.c \
-			patch-utils_Makefile.in \
-			patch-main_archives.c \
-			patch-archtable \
-			patch-include_parsedump.h 
+			patch-main_archives.c
 
 configure.args		--without-sgml-doc --with-libintl-prefix=${prefix} \
 			--with-libiconv-prefix=${prefix} --with-admindir=${prefix}/var/db/dpkg \
-			--mandir=${prefix}/share/man
+			--mandir=${prefix}/share/man \
+			--with-zlib --with-bz2 \
+			--disable-linker-optimisations
 
 build.type		gnu
-
-# Does not work as of dpkg 1.10.28
-use_parallel_build no
 
 set vardpkg ${destroot}${prefix}/var/db/dpkg
 destroot.keepdirs ${vardpkg} ${vardpkg}/updates ${vardpkg}/info
@@ -49,10 +47,7 @@ post-patch {
 	set scripts ${worksrcpath}/scripts
 	reinplace s|/etc/dpkg/|${prefix}/etc/dpkg/| \
 			${scripts}/dpkg-shlibdeps.pl \
-			${scripts}/dpkg-source.1
-
-	reinplace s|/etc/|${prefix}/etc/| \
-			${scripts}/update-alternatives.8
+			${scripts}/dpkg-source.pl
 
 	reinplace s|/etc/alternatives|${prefix}/etc/alternatives|g \
 			${scripts}/update-alternatives.pl
