--- a/dports/sysutils/zmq/Portfile
+++ b/dports/sysutils/zmq/Portfile
@@ -1,38 +1,34 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem 1.0
+
 name                    zmq
-version                 1.0.0
-description             Ultra-fast AMQP-compliant messaging server
-long_description        0MQ is a lightweight messaging kernel. It achieves 25 \
-                        microsecond end-to-end latencies and 2.8 million messages \
-                        per second. It is intended to be fully AMQP-compliant.
+version                 2.0.9
+
+description             ØMQ lightweight messaging kernel
+
+long_description        The ØMQ lightweight messaging kernel is a library which \
+                        extends the standard socket interfaces with features \
+                        traditionally provided by specialised messaging middleware \
+                        products. ØMQ sockets provide an abstraction of asynchronous \
+                        message queues, multiple messaging patterns, message \
+                        filtering (subscriptions), seamless access to multiple \
+                        transport protocols and more.
+
 maintainers             openmaintainer brett
 categories              sysutils net
 platforms               darwin
 homepage                http://www.zeromq.org/
 master_sites            http://www.zeromq.org/local--files/area:download/
-checksums               sha1 2013d8739ab03b14f28f46a355171d9680c27b20
-configure.args          --mandir=${prefix}/share/man \
-                        --with-c
-# configure.env           JAVA_HOME=/System/Library/Frameworks/JavaVM.framework/Versions/1.6
+distname                zeromq-${version}
 
-# variant python description {build Python language binding} {
-#     depends_lib-append     port:python26
-#     configure.args-append  --with-python
-# }
+checksums               md5     eadda72ecc5bcfa50a521436e6d92252 \
+                        sha1    c636c5b28f2ed4e5b10299d5fe4b08dccbeabe22 \
+                        rmd160  7a6a2eec50a586c2a1ef11152c7890db5444bef0
 
-variant java description {build Java language binding} {
-    depends_lib-append bin:java:kaffe
-    configure.args-append   --with-java
-}
+universal_variant       no
 
-variant amqp description {build libzmq with AMQP extension} {
-    configure.args-append   --with-amqp
-}
-
-variant ruby description {build Ruby language binding} {
-    depends_lib-append     port:ruby
-    configure.args-append   --with-ruby
-    configure.args-append   --with-ruby-headersdir=${prefix}/lib/ruby/1.8/i686-darwin9
-}
+livecheck.type          regex
+livecheck.url           ${homepage}area:download
+livecheck.regex         zeromq-(\[0-9.\]+)${extract.suffix}
