oregano: fix build error (#20631), homepage and master_sites dead so provide substitutes, update dependencies, livecheck.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71766 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/oregano/Portfile
+++ b/dports/gnome/oregano/Portfile
@@ -6,22 +6,37 @@ name                oregano
 version             0.69.0
 categories          gnome science
 maintainers         nomaintainer
-description         An application for schematic capture and simulation of electrical circuits.
+description         A graphical software application for schematic capture and simulation of electrical circuits.
 long_description    ${description}
 
 platforms           darwin
 
-homepage            http://oregano.gforge.lug.fi.uba.ar/index.php
-master_sites        http://gforge.lug.fi.uba.ar/frs/download.php/86/
+#
+# official homepage and master_sites seem to be dead
+#
+
+#homepage            http://oregano.gforge.lug.fi.uba.ar/index.php
+#master_sites        http://gforge.lug.fi.uba.ar/frs/download.php/86/
+
+homepage            http://en.wikipedia.org/wiki/Oregano_(software)
+master_sites        gentoo
 
 checksums           md5     f98abc5c79cc733b49cd07995afc9c1e \
                     sha1    1fd3a7396a596a2f9016dbc682c7d37771148205 \
                     rmd160  ea71522aca807b82f8ce50d598014e518fdd08e7
 
-depends_build       port:scons port:pkgconfig
+depends_build       port:pkgconfig \
+                    port:scons
 
-depends_lib         port:gtk2 port:libglade2 port:libgnomeui port:libxml2 \
-                    port:libgnomecanvas port:gtksourceview path:lib/pkgconfig/cairo.pc:cairo
+depends_lib         port:libgnomeui \
+                    port:libgnomecanvas \
+                    port:gtksourceview
+
+patchfiles          patch-SConstruct.diff
+
+post-patch {
+        reinplace "s|@MP_PREFIX@|${prefix}|" ${worksrcpath}/SConstruct
+}
 
 use_configure       no
 
@@ -43,5 +58,5 @@ post-destroot {
 }
 
 livecheck.type      regex
-livecheck.url       http://gforge.lug.fi.uba.ar/frs/?group_id=11
+livecheck.url       http://mirror.facebook.net/gentoo/distfiles/
 livecheck.regex     "${name}-(\\d+(?:\\.\\d+)*)${extract.suffix}"
