clutter-gst: with maintainer's approval, update to version 1.2.0 openmaintainer, closes #26552.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71768 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/clutter-gst/Portfile
+++ b/dports/graphics/clutter-gst/Portfile
@@ -4,28 +4,31 @@
 PortSystem      1.0
 
 name            clutter-gst
-version         0.10.0
+version         1.2.0
 set branch      [string range $version 0 [expr [string last "." $version] - 1]]
 categories      graphics
 description     Clutter GStreamer integration library.
 long_description Clutter-GStreamer (clutter-gst) is an integration library \
                  for using GStreamer with Clutter.  Its purpose is to implement \
                  the ClutterMedia interface using GStreamer.
-maintainers     nodamage.com:nodamage
+maintainers     nodamage.com:nodamage openmaintainer
 platforms       darwin
 homepage        http://www.clutter-project.org/
 master_sites    http://www.clutter-project.org/sources/${name}/${branch}/
 
-checksums       md5     89982f2988090e495e06d491f6dee89b \
-                sha1    dc2d040b76e890f7a010a49676bb59ef1b52bc23 \
-                rmd160  04591b4be03b9b561e60c6712c8fceb2b07c8b15
+checksums       md5     42a551d143c6562afa3e15b54352f4c6 \
+                sha1    eed8f4a980e4146c470b6ad2f3a9e29bb5e191c3 \
+                rmd160  ed304e729a9e8b89b4fde987f08df199cce7d758
 
 depends_build \
     port:pkgconfig
 
 depends_lib \
-    port:gstreamer \
-    path:lib/pkgconfig/glib-2.0.pc:glib2 \
     port:clutter \
     port:gst-plugins-base
- 
+
+configure.args  --enable-introspection=no
+
+livecheck.type  regex
+livecheck.url   http://www.clutter-project.org/sources/${name}/${branch}/
+livecheck.regex "${name}-(\\d+(?:\\.\\d+)*)${extract.suffix}"
