py2[56]-pyclutter: with maintainer's approval, update to version 1.0.2 openmaintainer, closes #26558 #26559.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71769 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py25-pyclutter/Portfile
+++ b/dports/python/py25-pyclutter/Portfile
@@ -3,21 +3,22 @@
 
 PortSystem      1.0
 name            py25-pyclutter
-version         0.9.2
-distname        pyclutter-${version}
+set my_name     pyclutter
+version         1.0.2
+distname        ${my_name}-${version}
 set branch      [string range $version 0 [expr [string last "." $version] - 1]]
 categories      python graphics
 description     Python bindings for Clutter 1.0.
 long_description This port contains the Python modules that allow you \
                  to use the Clutter toolkit in Python programs.
-maintainers     nodamage.com:nodamage
+maintainers     nodamage.com:nodamage openmaintainer
 platforms       darwin
 homepage        http://www.clutter-project.org/
-master_sites    http://www.clutter-project.org/sources/pyclutter/${branch}/
+master_sites    http://www.clutter-project.org/sources/${my_name}/${branch}/
 
-checksums       md5     c848543847191ab62361d3c705567d52 \
-                sha1    b67ba376bcc14b97364cf730776e9523d4d76de3 \
-                rmd160  bba1fe67ab4d6dae71d2e5a849e7042ebc0a9c42
+checksums       md5     9bd6a73bba4a40e5dc79003ccb6bc6a7 \
+                sha1    819d4ec117f5a41939fbb18c8e2b308099888f04 \
+                rmd160  8b4c89cb701354b62454cf3738c5a55c51c7ca1e
 
 depends_build \
     port:pkgconfig \
@@ -31,8 +32,11 @@ depends_lib \
     port:py25-gobject \
     port:py25-gtk \
     port:py25-gst-python \
-    port:clutter \
-    port:clutter-gtk \
-    port:clutter-gst
-    
+    port:clutter
+
+configure.python ${prefix}/bin/python2.5
 configure.pkg_config_path ${prefix}/Library/Frameworks/Python.framework/Versions/2.5/lib/pkgconfig
+
+livecheck.type      regex
+livecheck.url       ${master_sites}
+livecheck.regex     "${name}-(\\d+(?:\\.\\d+)*)${extract.suffix}"
