--- a/dports/python/py26-pyclutter/Portfile
+++ b/dports/python/py26-pyclutter/Portfile
@@ -4,21 +4,22 @@
 PortSystem      1.0
 
 name            py26-pyclutter
-version         0.9.2
-distname        pyclutter-${version}
+set my_name     pyclutter
+version         1.0.2
+distname        ${my_name}-${version}
 set branch      [string range $version 0 [expr [string last "." $version] - 1]]
 categories      python graphics
 description     Python bindings for Clutter 1.0.
 long_description This port contains the Python modules that allow you \
                  to use the Clutter toolkit in Python programs.
-maintainers     nodamage.com:nodamage
+maintainers     nodamage.com:nodamage openmaintainer
 platforms       darwin
 homepage        http://www.clutter-project.org/
-master_sites    http://www.clutter-project.org/sources/pyclutter/${branch}/
+master_sites    http://www.clutter-project.org/sources/${my_name}/${branch}/
 
-checksums       md5     c848543847191ab62361d3c705567d52 \
-                sha1    b67ba376bcc14b97364cf730776e9523d4d76de3 \
-                rmd160  bba1fe67ab4d6dae71d2e5a849e7042ebc0a9c42
+checksums       md5     9bd6a73bba4a40e5dc79003ccb6bc6a7 \
+                sha1    819d4ec117f5a41939fbb18c8e2b308099888f04 \
+                rmd160  8b4c89cb701354b62454cf3738c5a55c51c7ca1e
 
 depends_build \
     port:pkgconfig \
@@ -32,9 +33,7 @@ depends_lib \
     port:py26-gobject \
     port:py26-gtk \
     port:py26-gst-python \
-    port:clutter \
-    port:clutter-gtk \
-    port:clutter-gst
+    port:clutter
 
 set python_prefix ${frameworks_dir}/Python.framework/Versions/2.6
 
@@ -46,3 +45,20 @@ configure.pkg_config_path  ${python_prefix}/lib/pkgconfig
 configure.python    ${prefix}/bin/python2.6
 
 configure.env-append PYGOBJECT_CODEGEN=${prefix}/Library/Frameworks/Python.framework/Versions/2.6/bin/pygobject-codegen-2.0
+
+post-destroot {
+    set docdir ${prefix}/share/doc/${name}
+    xinstall -d ${destroot}${docdir}
+    xinstall -m 0644 -W ${worksrcpath} AUTHORS COPYING ChangeLog NEWS README \
+        ${destroot}${docdir}
+    xinstall -d ${destroot}${prefix}/share/gtk-doc/html
+    system "ln -s ${python_prefix}/share/${my_name} ${destroot}${prefix}/share/${my_name}26"
+# devhelp requires gtk-doc directory name  and .devhelp file name (less the .devhelp) to match
+    file rename ${destroot}${python_prefix}/share/gtk-doc/html/${my_name}/${my_name}.devhelp \
+                ${destroot}${python_prefix}/share/gtk-doc/html/${my_name}/${my_name}26.devhelp
+    system "ln -s ${python_prefix}/share/gtk-doc/html/${my_name} ${destroot}${prefix}/share/gtk-doc/html/${my_name}26"
+}
+
+livecheck.type      regex
+livecheck.url       ${master_sites}
+livecheck.regex     "${name}-(\\d+(?:\\.\\d+)*)${extract.suffix}"
