latex2html: whitespace changes, add modeline
git-svn-id: https://svn.macports.org/repository/macports/trunk@71771 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/print/latex2html/Portfile
+++ b/dports/print/latex2html/Portfile
@@ -1,42 +1,50 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
-PortSystem 1.0
+PortSystem              1.0
 
-name		latex2html
-version		2008
-revision	2
-categories	print
-platforms	darwin
-maintainers	nomaintainer
-description	Convert LaTeX into HTML.
-long_description	\
-		LATEX2HTML is a convertor written in Perl that		\
-		converts LATEX documents to HTML.
+name                    latex2html
+version                 2008
+revision                2
+categories              print
+platforms               darwin
+maintainers             nomaintainer
 
-homepage	http://saftsack.fs.uni-bayreuth.de/~latex2ht
-master_sites	${homepage}/current/
+description             Convert LaTeX into HTML.
 
-checksums	md5     275ab6cfa8ca9328446b7f40d8dc302e		\
-		sha1    5e0aa47572e0c13a4c5da51e963d5496be3f86e7	\
-		rmd160  a95f06253d6fc8808ffedcad7edf8235194d7756
+long_description        LATEX2HTML is a convertor written in Perl that \
+                        converts LATEX documents to HTML.
 
-depends_run	bin:latex:texlive-latex	\
-		port:ghostscript	\
-		port:netpbm
+homepage                http://saftsack.fs.uni-bayreuth.de/~latex2ht
+master_sites            ${homepage}/current/
 
-depends_lib	path:bin/perl:perl5
+checksums               md5     275ab6cfa8ca9328446b7f40d8dc302e \
+                        sha1    5e0aa47572e0c13a4c5da51e963d5496be3f86e7 \
+                        rmd160  a95f06253d6fc8808ffedcad7edf8235194d7756
 
-configure.perl  ${prefix}/bin/perl
+depends_run             bin:latex:texlive-latex \
+                        port:ghostscript \
+                        port:netpbm
 
-configure.args	--without-mktexlsr	\
-		--with-texpath=${prefix}/share/texmf/tex/latex/html
+depends_lib             path:bin/perl:perl5
 
-post-destroot	{ reinplace "s|gray85|rgb:d9/d9/d9|g" ${destroot}${prefix}/bin/pstoimg
+configure.perl          ${prefix}/bin/perl
+
+configure.args          --without-mktexlsr \
+                        --with-texpath=${prefix}/share/texmf/tex/latex/html
+
+post-destroot {
+    reinplace "s|gray85|rgb:d9/d9/d9|g" ${destroot}${prefix}/bin/pstoimg
 }
 
-post-activate	{ system "mktexlsr" }
-post-deactivate	{ system "mktexlsr" }
+post-activate {
+    system "mktexlsr"
+}
 
-livecheck.type  regex
-livecheck.url "http://saftsack.fs.uni-bayreuth.de/~latex2ht/current/?C=M;O=D"
-livecheck.regex "${name}-(\\d+(?:\\.\\d+)*)${extract.suffix}"
+post-deactivate {
+    system "mktexlsr"
+}
+
+livecheck.type          regex
+livecheck.url           "http://saftsack.fs.uni-bayreuth.de/~latex2ht/current/?C=M;O=D"
+livecheck.regex         "${name}-(\\d+(?:\\.\\d+)*)${extract.suffix}"
