latex2html: simplify livecheck
git-svn-id: https://svn.macports.org/repository/macports/trunk@71772 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/print/latex2html/Portfile
+++ b/dports/print/latex2html/Portfile
@@ -46,5 +46,5 @@ post-deactivate {
 }
 
 livecheck.type          regex
-livecheck.url           "http://saftsack.fs.uni-bayreuth.de/~latex2ht/current/?C=M;O=D"
-livecheck.regex         "${name}-(\\d+(?:\\.\\d+)*)${extract.suffix}"
+livecheck.url           [lindex ${master_sites} 0]
+livecheck.regex         ${name}-(\\d+(?:\\.\\d+)*)${extract.suffix}
