latex2html: cope with release candidate versions of ghostscript; see #26586
git-svn-id: https://svn.macports.org/repository/macports/trunk@71773 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/print/latex2html/Portfile
+++ b/dports/print/latex2html/Portfile
@@ -28,6 +28,8 @@ depends_run             bin:latex:texlive-latex \
 
 depends_lib             path:bin/perl:perl5
 
+patchfiles              patch-config-config.pl.diff
+
 configure.perl          ${prefix}/bin/perl
 
 configure.args          --without-mktexlsr \
