latex2html: convert reinplace to patchfile
git-svn-id: https://svn.macports.org/repository/macports/trunk@71774 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/print/latex2html/Portfile
+++ b/dports/print/latex2html/Portfile
@@ -28,16 +28,13 @@ depends_run             bin:latex:texlive-latex \
 
 depends_lib             path:bin/perl:perl5
 
-patchfiles              patch-config-config.pl.diff
+patchfiles              patch-config-config.pl.diff \
+                        patch-pstoimg.pin.diff
 
 configure.perl          ${prefix}/bin/perl
 
 configure.args          --without-mktexlsr \
                         --with-texpath=${prefix}/share/texmf/tex/latex/html
-
-post-destroot {
-    reinplace "s|gray85|rgb:d9/d9/d9|g" ${destroot}${prefix}/bin/pstoimg
-}
 
 post-activate {
     system "mktexlsr"
