latex2html: noarch; add license info; install doc files
git-svn-id: https://svn.macports.org/repository/macports/trunk@71775 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/print/latex2html/Portfile
+++ b/dports/print/latex2html/Portfile
@@ -5,10 +5,12 @@ PortSystem              1.0
 
 name                    latex2html
 version                 2008
-revision                2
+revision                3
 categories              print
 platforms               darwin
 maintainers             nomaintainer
+license                 GPL-2
+supported_archs         noarch
 
 description             Convert LaTeX into HTML.
 
@@ -35,6 +37,19 @@ configure.perl          ${prefix}/bin/perl
 
 configure.args          --without-mktexlsr \
                         --with-texpath=${prefix}/share/texmf/tex/latex/html
+
+post-destroot {
+    set docdir ${destroot}${prefix}/share/doc/${name}
+    xinstall -d ${docdir}
+    xinstall -m 644 -W ${worksrcpath} \
+        BUGS \
+        Changes \
+        FAQ \
+        LICENSE \
+        README \
+        TODO \
+        ${docdir}
+}
 
 post-activate {
     system "mktexlsr"
