pdfjam: update to 2.06, noarch, install sample conf file; see #26308 (maintainer timeout)
git-svn-id: https://svn.macports.org/repository/macports/trunk@71781 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/textproc/pdfjam/Portfile
+++ b/dports/textproc/pdfjam/Portfile
@@ -3,15 +3,17 @@
 PortSystem              1.0
 
 name                    pdfjam
-version                 1.21
+version                 2.06
 categories              textproc pdf
 maintainers             vcn.com:jjstickel
 license                 GPLv2
 platforms               darwin
 homepage                http://go.warwick.ac.uk/pdfjam
 master_sites            ${homepage}
-distname                ${name}_${version}
+extract.suffix          .tgz
+distname                ${name}_[join [split ${version} .] {}]
 worksrcdir              ${name}
+supported_archs         noarch
 use_configure           no
 
 description             A few PDF manipulation tools.
@@ -21,32 +23,29 @@ long_description \
     simple interface to some of the functionality of the excellent \
     pdfpages package (by Andreas Matthias) for pdfLaTeX.
 
-checksums               md5     71d2d664777d32ec4154ab4c2e5965dc \
-                        sha1    10396b02bae42e1731b8a0e52dbcbdc5ec4fdae9 \
-                        rmd160  5c1c14f0d2e33c9536475863e33e69869b253cf9
+checksums               md5     8113cae5d43359708be9e7e9d6df999d \
+                        sha1    4bc7afe3c3d8a45877d2c4ff76e3ca31900b2840 \
+                        rmd160  01e1add0e1b58bfda06efdedb230c7d721c51e62
 		    
 depends_run \
     path:bin/pdflatex:texlive
 
-post-extract {
-    reinplace "s|/usr/local/etc|${prefix}/etc|" ${worksrcpath}/scripts/pdf90
-    reinplace "s|/usr/local/etc|${prefix}/etc|" ${worksrcpath}/scripts/pdfjoin
-    reinplace "s|/usr/local/etc|${prefix}/etc|" ${worksrcpath}/scripts/pdfnup
-    reinplace "s|/usr/local/etc|${prefix}/etc|" ${worksrcpath}/man1/pdf90.1
-    reinplace "s|/usr/local/etc|${prefix}/etc|" ${worksrcpath}/man1/pdfjoin.1
-    reinplace "s|/usr/local/etc|${prefix}/etc|" ${worksrcpath}/man1/pdfnup.1
-    reinplace "s|/usr/local/etc|${prefix}/etc|" ${worksrcpath}/PDFjam-README.html
+post-patch {
+    reinplace "s|/usr/local|${prefix}|g" \
+        ${worksrcpath}/bin/pdfjam \
+        ${worksrcpath}/man1/pdfjam.1 \
+        ${worksrcpath}/PDFjam-README.html
 }
 
 build {}
 
 destroot {
-    xinstall -m 755 -d ${destroot}${prefix}/bin
-    xinstall -m 755 -W ${worksrcpath}/scripts pdf90 pdfjoin pdfnup \
-       ${destroot}${prefix}/bin
-    xinstall -m 755 -d ${destroot}${prefix}/share/man/man1
-    xinstall -m 644 -W ${worksrcpath}/man1 pdf90.1 pdfjoin.1 pdfnup.1 \
-       ${destroot}${prefix}/share/man/man1
+    delete ${destroot}${prefix}/bin ${destroot}${prefix}/share/man/man1
+    copy ${worksrcpath}/bin ${destroot}${prefix}/bin
+    copy ${worksrcpath}/man1 ${destroot}${prefix}/share/man/man1
+
+    xinstall -m 644 ${worksrcpath}/pdfjam.conf ${destroot}${prefix}/etc/pdfjam.conf.sample
+
     xinstall -m 755 -d ${destroot}${prefix}/share/doc/${name}
     xinstall -m 644 -W ${worksrcpath} COPYING PDFjam-README.html VERSION \
        ${destroot}${prefix}/share/doc/${name}
